WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294009
[css-anchor-position-1] Anchor functions fail to invalidate on container resize
https://bugs.webkit.org/show_bug.cgi?id=294009
Summary
[css-anchor-position-1] Anchor functions fail to invalidate on container resize
Antti Koivisto
Reported
2025-06-04 00:38:49 PDT
Resizing a container may not change the position of the anchors but the anchor functions referencing bottom/right insets may still need to be recomputed.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-04 00:42:37 PDT
<
rdar://problem/152560741
>
Antti Koivisto
Comment 2
2025-06-04 00:49:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46309
EWS
Comment 3
2025-06-04 05:41:00 PDT
Committed
295807@main
(8fca573e62a4): <
https://commits.webkit.org/295807@main
> Reviewed commits have been landed. Closing PR #46309 and removing active labels.
Kiet Ho
Comment 4
2025-07-28 16:44:13 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/54016
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug