[css-anchor-position-1] Anchor functions fail to invalidate on container resize https://bugs.webkit.org/show_bug.cgi?id=294009 rdar://problem/152560741

Reviewed by Alan Baradlay.

Resizing a container may not change the position of the anchors but the anchor functions referencing bottom/right
insets may still need to be recomputed.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-positioned-containing-block-resize-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-positioned-containing-block-resize.html: Added.
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::invalidateForAnchorDependencies):

Besides saving the previous anchor rect also save the containing block sizes for boxes that can host anchored elements.

* Source/WebCore/style/StyleScope.h:

Canonical link: https://commits.webkit.org/295807@main